--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: Rever Blog
 SEOTitle: Rever | Rever Blog
 header-img: img/home-bg.jpg
 email: rever207@gmail.com
-description: "关于程序与设计、黑客与画家 | Web & Mobile Lover，Software Engineer，UX Designer | 这里是 @Rever 的个人博客，与你一起发现更大的世界。"
+description: "Rever 的个人博客，与你一起发现更大的世界。"
 keyword: "Rever Blog, 博客, 个人网站, 互联网, Web, JavaScript, 前端, 设计"
 url: "https://Rever.me"              # your host, for absolute URL
 baseurl: ""                             # for example, '/blog' if your blog hosted on 'host/blog'
